...
                autoCapitalize={'none'}
                autoCorrect={false}
                placeholder={`${this.props.t('EXAMPLE')} : demo.coopcycle.org`}
                onChangeText={text => this.setState({ text })}
                returnKeyType="done"
                onSubmitEditing={this.handleForm.bind(this)}
                testID="customServerURL"
                autoCompleteType="off"
              />
            </Input>
            {this.props.hasError && (
              <FormControlError>
                <FormControlErrorText className="text-red-500">
...
              </FormControlError>
            )}
            <View style={{ paddingVertical: 15 }}>
              <Button
                block
                onPress={this.handleForm.bind(this)}
                testID="submitCustomServer">
                <ButtonText>{this.props.t('SUBMIT')}</ButtonText>
              </Button>
            </View>
          </FormControl>
        </VStack>
      </View>
...
