...
        options={({ navigation }) => ({
          title: i18n.t('CHOOSE_CITY'),
          headerBackTitle: null,
          headerRight: () => (
            <HeaderButtons>
              <HeaderButton
                testID="moreServerOptions"
                iconName="ellipsis-horizontal-sharp"
                onPress={() => navigation.navigate('HomeCustomServer')} />
            </HeaderButtons>
          ),
        })}
      />
...
