...
            </Text>
          </View>
          <View>
            <View>
              <Button
                onPress={_ => this.props.navigation.navigate('HomeChooseCity')}
                testID="chooseCityBtn"
                size="lg">
                <ButtonText>{this.props.t('CHOOSE_CITY')}</ButtonText>
              </Button>
            </View>
            <View style={{ paddingVertical: 10 }}>
              <Text note style={{ textAlign: 'center' }}>
...
