appId: ${APP_ID}
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "chooseCityBtn"
    timeout: 40000
- tapOn:
    id: "chooseCityBtn"
- tapOn:
    id: "moreServerOptions"
- tapOn:
    id: "customServerURL"
- inputText: "demo.coopcycle.org"
- hideKeyboard
- tapOn:
    id: "submitCustomServer"
